1-traefik/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: traefik
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: authentik-tls
            namespace: default
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: traefik
  namespace: default
spec:
  controllerName: traefik.io/gateway-controller
